# openapi.json
@@ -151,16 +151,76 @@
           "Expenses"
         ],
         "summary": "Retrieve all expenses",
-        "description": "Get a detailed list of all recorded expenses, including description, amount, category, subcategory, and date.",
+        "description": "Get a detailed list of all recorded expenses, with optional filters and pagination.",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "startDate",
+            "schema": {
+              "type": "string",
+              "format": "date"
+            },
+            "description": "The start date to filter expenses (YYYY-MM-DD)."
+          },
+          {
+            "in": "query",
+            "name": "endDate",
+            "schema": {
+              "type": "string",
+              "format": "date"
+            },
+            "description": "The end date to filter expenses (YYYY-MM-DD)."
+          },
+          {
+            "in": "query",
+            "name": "page",
+            "schema": {
+              "type": "integer",
+              "default": 1
+            },
+            "description": "The page number for pagination (must be a positive integer)."
+          },
+          {
+            "in": "query",
+            "name": "limit",
+            "schema": {
+              "type": "integer",
+              "default": 10
+            },
+            "description": "The number of expenses per page (must be a positive integer)."
+          }
+        ],
         "responses": {
           "200": {
-            "description": "A list of expenses.",
+            "description": "A list of expenses with pagination details.",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/Expense"
+                  "type": "object",
+                  "properties": {
+                    "page": {
+                      "type": "integer",
+                      "description": "The current page number."
+                    },
+                    "totalPages": {
+                      "type": "integer",
+                      "description": "The total number of pages."
+                    },
+                    "nextPage": {
+                      "type": "integer",
+                      "nullable": true,
+                      "description": "The next page number, if available."
+                    },
+                    "totalItems": {
+                      "type": "integer",
+                      "description": "The total number of items."
+                    },
+                    "expenses": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/Expense"
+                      }
+                    }
                   }
                 }
               }
